--- a/README
+++ b/README
@@ -1,7 +1,6 @@
-| GET | / | Home page |
-
-| :---:|:-:| :--------|
-
+ |Method|Path|Purpose|
+ |------|----|-------|
+GET / Home page
 GET /places Places index page
 POST /places Create new place
 GET /places/new Form page for creating a new place
